crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_slot_outlets__compile_default_slot_outlet_with_fallback_only.snap
---
source: crates/vize_atelier_vapor/src/tests_slot_outlets.rs
expression: code.as_str()
---
import { createSlot as _createSlot, template as _template } from 'vue';
const t0 = _template("<div>fb</div>")
export function render(_ctx) {
const n0 = _createSlot("default", null, () => {
const n1 = t0()
return n1
})
return n0
}
